feat: Simplify project setup and dependencies
Refactors `package.json` to streamline dependencies and scripts. Removes build-specific tooling like Vite and adds `serve` for simpler local execution. Updates `index.html` to correctly reference the main script. Updates `README.md` with a more concise link. Adds `vercel.json` for deployment configuration.

--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
         <div class="cloud cloud-2" style="top: 85%; animation-duration: 80s;"></div>
     </div>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
