--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background: linear-gradient(to bottom, #87CEEB 0%, #B3E5FC 100%);
             margin: 0;
             overflow: hidden;
+            height: 100vh;
         }
 
         /* REMOVE FOCUS OUTLINES GLOBALLY */
@@ -64,6 +65,13 @@
             to { transform: translateX(calc(100vw + 200px)); }
         }
 
+        #root {
+            height: 100vh;
+            width: 100vw;
+            position: relative;
+            z-index: 10;
+        }
+
         .chat-container {
             backdrop-filter: blur(8px);
             background: rgba(255, 255, 255, 0.7);
@@ -74,14 +82,17 @@
         .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
         .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
     </style>
+    <!-- Use Babel to compile JSX/TSX in the browser for this specific environment -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "uuid": "https://esm.sh/uuid@^13.0.0"
+    "uuid": "https://esm.sh/uuid@^13.0.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -95,6 +106,7 @@
         <div class="cloud cloud-2" style="top: 85%; animation-duration: 80s;"></div>
     </div>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Tell Babel to compile this script -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
 </body>
 </html>
