--- a/index.html
+++ b/index.html
@@ -70,8 +70,15 @@
         .custom-scrollbar::-webkit-scrollbar { width: 6px; }
         .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
         .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
+        
+        /* Message animation */
+        .message-in { animation: messageFade 0.3s ease-out forwards; }
+        @keyframes messageFade {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
-    <!-- Babel for on-the-fly JSX/TS translation -->
+    <!-- Babel for on-the-fly JS translation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
 {
@@ -96,14 +103,7 @@
     </div>
     <div id="root"></div>
     
-    <!-- We load the entry point as a text/babel script so Babel can process the imports -->
-    <script type="text/babel" data-type="module">
-        import React from 'react';
-        import ReactDOM from 'react-dom/client';
-        import App from './App.tsx';
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
+    <!-- Using a single entry point file to ensure clean module resolution -->
+    <script type="text/babel" data-type="module" src="./main.js"></script>
 </body>
 </html>
