--- a/index.html
+++ b/index.html
@@ -17,34 +17,16 @@
             overflow: hidden;
             height: 100vh;
         }
-        #root {
-            height: 100vh;
-            width: 100vw;
-            position: relative;
-            z-index: 10;
-        }
+        #root { height: 100vh; width: 100vw; position: relative; z-index: 10; }
         .sky-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            z-index: -1; overflow: hidden;
         }
         .cloud {
-            position: absolute;
-            background: white;
-            border-radius: 50px;
-            opacity: 0.9;
-            animation: float linear infinite;
+            position: absolute; background: white; border-radius: 50px;
+            opacity: 0.9; animation: float linear infinite;
         }
-        .cloud::after, .cloud::before {
-            content: '';
-            position: absolute;
-            background: white;
-            border-radius: 50%;
-        }
+        .cloud::after, .cloud::before { content: ''; position: absolute; background: white; border-radius: 50%; }
         .cloud-1 { width: 100px; height: 40px; top: 10%; animation-duration: 45s; }
         .cloud-1::after { width: 50px; height: 50px; top: -25px; left: 15px; }
         .cloud-1::before { width: 40px; height: 40px; top: -15px; left: 45px; }
@@ -52,66 +34,69 @@
             from { transform: translateX(-200px); }
             to { transform: translateX(calc(100vw + 200px)); }
         }
-        #debug-overlay {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            background: rgba(0,0,0,0.8);
-            color: #0f0;
-            font-family: monospace;
-            font-size: 10px;
-            padding: 5px;
-            border-radius: 5px;
-            z-index: 9999;
-            pointer-events: none;
-            max-width: 300px;
+        #debug-log {
+            position: fixed; top: 0; right: 0; width: 300px; height: 100vh;
+            background: rgba(0,0,0,0.85); color: #0f0; font-family: monospace;
+            font-size: 11px; padding: 10px; overflow-y: auto; z-index: 10000;
+            pointer-events: none; border-left: 2px solid #333; display: none;
         }
     </style>
     <script>
-        // Diagnostic Logging
-        window.onerror = function(msg, url, lineNo, columnNo, error) {
-            console.log("%c [ERROR] ", "background: red; color: white", msg, "at", url, ":", lineNo);
-            const debug = document.getElementById('debug-overlay');
-            if (debug) debug.innerText = "Error: " + msg;
-            return false;
+        window.log = (tag, msg, color = "#10b981") => {
+            console.log(`%c [${tag}] `, `background: ${color}; color: white`, msg);
+            const overlay = document.getElementById('debug-log');
+            if (overlay) {
+                const line = document.createElement('div');
+                line.style.marginBottom = "4px";
+                line.innerText = `[${tag}] ${msg}`;
+                overlay.appendChild(line);
+                overlay.scrollTop = overlay.scrollHeight;
+            }
         };
-        console.log("%c [HELPFULAT] ", "background: #10b981; color: white", "App initialization sequence started...");
+        window.onerror = (msg, url, line) => log("FATAL", `${msg} at ${line}`, "#ef4444");
+        
+        // Toggle debug overlay with Ctrl+Shift+D
+        window.addEventListener('keydown', (e) => {
+            if (e.ctrlKey && e.shiftKey && e.code === 'KeyD') {
+                const d = document.getElementById('debug-log');
+                d.style.display = d.style.display === 'none' ? 'block' : 'none';
+            }
+        });
     </script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.3.1",
-    "uuid": "https://esm.sh/uuid@11.0.5",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
+    {
+      "imports": {
+        "react": "https://esm.sh/react@19.0.0",
+        "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+        "@google/genai": "https://esm.sh/@google/genai@1.3.1",
+        "uuid": "https://esm.sh/uuid@11.0.5"
+      }
+    }
+    </script>
 </head>
 <body>
-    <div id="debug-overlay">Booting Helpfulat...</div>
+    <div id="debug-log"></div>
     <div class="sky-container">
         <div class="cloud cloud-1"></div>
         <div class="cloud cloud-1" style="top: 40%; animation-delay: -10s; opacity: 0.6;"></div>
         <div class="cloud cloud-1" style="top: 70%; animation-delay: -25s;"></div>
     </div>
     <div id="root"></div>
-    <script type="text/babel" data-type="module" data-presets="typescript,react">
-        // Inline entry point to avoid separate file fetch issues
+
+    <script type="text/babel" data-presets="react,typescript" data-type="module">
         import React from 'react';
         import ReactDOM from 'react-dom/client';
-        import App from './App.tsx';
+        import App from './App.js';
 
-        console.log("%c [RENDER] ", "background: #3b82f6; color: white", "Attempting React DOM mount...");
+        window.log("BOOT", "Entry point starting...");
+        
         try {
             const root = ReactDOM.createRoot(document.getElementById('root'));
             root.render(<App />);
-            document.getElementById('debug-overlay').style.display = 'none';
-            console.log("%c [SUCCESS] ", "background: #10b981; color: white", "App mounted successfully.");
+            window.log("BOOT", "React mount called successfully.");
         } catch (e) {
-            console.error("Mounting failed:", e);
+            window.log("BOOT-ERR", e.message, "#ef4444");
         }
     </script>
 </body>
