--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             to { transform: translateX(calc(100vw + 200px)); }
         }
         #debug-log {
-            position: fixed; top: 0; right: 0; width: 300px; height: 100vh;
-            background: rgba(0,0,0,0.85); color: #0f0; font-family: monospace;
-            font-size: 11px; padding: 10px; overflow-y: auto; z-index: 10000;
-            pointer-events: none; border-left: 2px solid #333; display: none;
+            position: fixed; bottom: 10px; left: 10px; width: 350px; max-height: 200px;
+            background: rgba(0,0,0,0.8); color: #0f0; font-family: monospace;
+            font-size: 10px; padding: 10px; overflow-y: auto; z-index: 10000;
+            border-radius: 8px; display: block; pointer-events: none;
         }
     </style>
     <script>
@@ -47,21 +47,12 @@
             const overlay = document.getElementById('debug-log');
             if (overlay) {
                 const line = document.createElement('div');
-                line.style.marginBottom = "4px";
-                line.innerText = `[${tag}] ${msg}`;
+                line.innerText = `[${new Date().toLocaleTimeString()}] ${tag}: ${msg}`;
                 overlay.appendChild(line);
                 overlay.scrollTop = overlay.scrollHeight;
             }
         };
         window.onerror = (msg, url, line) => log("FATAL", `${msg} at ${line}`, "#ef4444");
-        
-        // Toggle debug overlay with Ctrl+Shift+D
-        window.addEventListener('keydown', (e) => {
-            if (e.ctrlKey && e.shiftKey && e.code === 'KeyD') {
-                const d = document.getElementById('debug-log');
-                d.style.display = d.style.display === 'none' ? 'block' : 'none';
-            }
-        });
     </script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
@@ -76,7 +67,7 @@
     </script>
 </head>
 <body>
-    <div id="debug-log"></div>
+    <div id="debug-log">Starting systems...</div>
     <div class="sky-container">
         <div class="cloud cloud-1"></div>
         <div class="cloud cloud-1" style="top: 40%; animation-delay: -10s; opacity: 0.6;"></div>
@@ -84,19 +75,19 @@
     </div>
     <div id="root"></div>
 
-    <script type="text/babel" data-presets="react,typescript" data-type="module">
+    <!-- We use text/babel with data-type=module to force Babel to handle the imports AND the JSX -->
+    <script type="text/babel" data-presets="react" data-type="module">
         import React from 'react';
         import ReactDOM from 'react-dom/client';
         import App from './App.js';
 
-        window.log("BOOT", "Entry point starting...");
-        
+        window.log("ENTRY", "Injecting App into DOM...");
         try {
             const root = ReactDOM.createRoot(document.getElementById('root'));
             root.render(<App />);
-            window.log("BOOT", "React mount called successfully.");
+            window.log("ENTRY", "React Mount Successful");
         } catch (e) {
-            window.log("BOOT-ERR", e.message, "#ef4444");
+            window.log("ENTRY-ERR", e.message, "#ef4444");
         }
     </script>
 </body>
