--- a/index.html
+++ b/index.html
@@ -35,25 +35,15 @@
             to { transform: translateX(calc(100vw + 200px)); }
         }
         #debug-log {
-            position: fixed; bottom: 10px; left: 10px; width: 350px; max-height: 200px;
+            position: fixed; bottom: 10px; left: 10px; width: 350px; max-height: 150px;
             background: rgba(0,0,0,0.8); color: #0f0; font-family: monospace;
             font-size: 10px; padding: 10px; overflow-y: auto; z-index: 10000;
-            border-radius: 8px; display: block; pointer-events: none;
+            border-radius: 8px; display: block; pointer-events: none; opacity: 0.7;
         }
+        .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+        .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
     </style>
-    <script>
-        window.log = (tag, msg, color = "#10b981") => {
-            console.log(`%c [${tag}] `, `background: ${color}; color: white`, msg);
-            const overlay = document.getElementById('debug-log');
-            if (overlay) {
-                const line = document.createElement('div');
-                line.innerText = `[${new Date().toLocaleTimeString()}] ${tag}: ${msg}`;
-                overlay.appendChild(line);
-                overlay.scrollTop = overlay.scrollHeight;
-            }
-        };
-        window.onerror = (msg, url, line) => log("FATAL", `${msg} at ${line}`, "#ef4444");
-    </script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
     {
@@ -67,7 +57,7 @@
     </script>
 </head>
 <body>
-    <div id="debug-log">Starting systems...</div>
+    <div id="debug-log">System Initializing...</div>
     <div class="sky-container">
         <div class="cloud cloud-1"></div>
         <div class="cloud cloud-1" style="top: 40%; animation-delay: -10s; opacity: 0.6;"></div>
@@ -75,20 +65,231 @@
     </div>
     <div id="root"></div>
 
-    <!-- We use text/babel with data-type=module to force Babel to handle the imports AND the JSX -->
-    <script type="text/babel" data-presets="react" data-type="module">
-        import React from 'react';
+    <script type="text/babel" data-presets="react">
+        import React, { useState, useRef, useEffect, useCallback } from 'react';
         import ReactDOM from 'react-dom/client';
-        import App from './App.js';
+        import { GoogleGenAI } from "@google/genai";
+        import { v4 as uuidv4 } from 'uuid';
 
-        window.log("ENTRY", "Injecting App into DOM...");
-        try {
-            const root = ReactDOM.createRoot(document.getElementById('root'));
-            root.render(<App />);
-            window.log("ENTRY", "React Mount Successful");
-        } catch (e) {
-            window.log("ENTRY-ERR", e.message, "#ef4444");
-        }
+        const log = (tag, msg) => {
+            const overlay = document.getElementById('debug-log');
+            if (overlay) {
+                const line = document.createElement('div');
+                line.innerText = `[${tag}] ${msg}`;
+                overlay.appendChild(line);
+                overlay.scrollTop = overlay.scrollHeight;
+            }
+        };
+
+        const Role = { USER: 'user', ASSISTANT: 'assistant' };
+
+        // --- COMPONENTS ---
+
+        const ChatMessage = ({ message }) => {
+            const isAssistant = message.role === Role.ASSISTANT;
+            const isArabic = /[\u0600-\u06FF]/.test(message.content);
+
+            return (
+                <div className={`py-10 w-full animate-in fade-in slide-in-from-bottom-4 duration-500 ${isAssistant ? 'bg-white/30 backdrop-blur-md border-y border-white/50' : 'bg-transparent'}`}>
+                    <div className={`max-w-4xl mx-auto px-6 flex gap-8 ${isArabic ? 'flex-row-reverse' : ''}`}>
+                        <div className="flex-shrink-0">
+                            <div className={`w-14 h-14 rounded-2xl flex items-center justify-center text-3xl shadow-xl border-4 border-white ${isAssistant ? 'bg-emerald-500' : 'bg-sky-500'}`}>
+                                {isAssistant ? '🧠' : '👤'}
+                            </div>
+                        </div>
+                        <div className={`flex-1 min-w-0 ${isArabic ? 'text-right' : 'text-left'}`}>
+                            {message.isSearching ? (
+                                <div className="flex items-center gap-4 py-4">
+                                    <div className="w-3 h-3 bg-emerald-500 rounded-full animate-ping"></div>
+                                    <div className="text-emerald-700 font-black italic tracking-wider animate-pulse">
+                                        {isArabic ? "أقوم بالبحث والتحليل العميق..." : "DIGGING DEEP INTO THE WEB..."}
+                                    </div>
+                                </div>
+                            ) : (
+                                <div className="space-y-6">
+                                    <div className="text-gray-800 text-lg leading-relaxed font-semibold whitespace-pre-wrap">
+                                        {message.content}
+                                    </div>
+                                    {message.sources && message.sources.length > 0 && (
+                                        <div className="pt-6 border-t-2 border-emerald-100">
+                                            <div className="text-[10px] font-black text-emerald-600 uppercase tracking-widest mb-3">
+                                                {isArabic ? "المصادر الموثقة" : "VERIFIED SOURCES"}
+                                            </div>
+                                            <div className={`flex flex-wrap gap-3 ${isArabic ? 'flex-row-reverse' : ''}`}>
+                                                {message.sources.map((s, i) => (
+                                                    <a key={i} href={s.web?.uri} target="_blank" className="bg-white/80 hover:bg-emerald-50 border-2 border-white px-4 py-2 rounded-xl text-xs font-bold text-emerald-900 shadow-sm transition-all hover:-translate-y-1 flex items-center gap-2">
+                                                        <span className="w-2 h-2 bg-emerald-400 rounded-full"></span>
+                                                        {s.web?.title || "Research Link"}
+                                                    </a>
+                                                ))}
+                                            </div>
+                                        </div>
+                                    )}
+                                </div>
+                            )}
+                        </div>
+                    </div>
+                </div>
+            );
+        };
+
+        const Arcade = () => {
+            const [board, setBoard] = useState(Array(9).fill(null));
+            const calculateWinner = (sq) => {
+                const lines = [[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8],[0,4,8],[2,4,6]];
+                for (let [a, b, c] of lines) if (sq[a] && sq[a] === sq[b] && sq[a] === sq[c]) return sq[a];
+                return sq.includes(null) ? null : 'Draw';
+            };
+            const winner = calculateWinner(board);
+            const handleClick = (i) => {
+                if (winner || board[i]) return;
+                const nb = [...board]; nb[i] = 'X'; setBoard(nb);
+                setTimeout(() => {
+                    if (calculateWinner(nb)) return;
+                    const empty = nb.map((v, idx) => v === null ? idx : null).filter(v => v !== null);
+                    if (empty.length > 0) {
+                        nb[empty[Math.floor(Math.random() * empty.length)]] = 'O';
+                        setBoard([...nb]);
+                    }
+                }, 400);
+            };
+            return (
+                <div className="p-10 flex flex-col items-center">
+                    <div className="bg-white/80 backdrop-blur-xl p-10 rounded-[3rem] shadow-2xl border-4 border-white max-w-md w-full">
+                        <h2 className="text-4xl font-black text-purple-900 mb-8 text-center">Arcade</h2>
+                        <div className="grid grid-cols-3 gap-4 mb-8">
+                            {board.map((val, i) => (
+                                <button key={i} onClick={() => handleClick(i)} className={`h-24 rounded-[1.5rem] text-4xl font-black flex items-center justify-center border-b-8 ${val === 'X' ? 'bg-sky-100 text-sky-600 border-sky-200' : val === 'O' ? 'bg-purple-100 text-purple-600 border-purple-200' : 'bg-gray-50 border-gray-100'}`}>
+                                    {val}
+                                </button>
+                            ))}
+                        </div>
+                        {winner && <div className="text-center"><p className="text-2xl font-black mb-4">{winner === 'Draw' ? "Draw!" : winner + " Wins!"}</p><button onClick={() => setBoard(Array(9).fill(null))} className="bg-purple-600 text-white px-8 py-2 rounded-xl font-bold">Restart</button></div>}
+                    </div>
+                </div>
+            );
+        };
+
+        // --- MAIN APP ---
+
+        const App = () => {
+            const [sessions, setSessions] = useState([]);
+            const [currentSessionId, setCurrentSessionId] = useState(null);
+            const [input, setInput] = useState('');
+            const [isLoading, setIsLoading] = useState(false);
+            const [isDeepSearch, setIsDeepSearch] = useState(true);
+            const [lang, setLang] = useState('EN');
+            const [activeTab, setActiveTab] = useState('chat');
+            const messagesEndRef = useRef(null);
+
+            const isRTL = lang === 'AR';
+            const currentSession = sessions.find(s => s.id === currentSessionId);
+
+            const createNewSession = useCallback(() => {
+                const id = uuidv4();
+                setSessions(prev => [{ id, title: lang === 'EN' ? 'New Chat' : 'محادثة جديدة', messages: [] }, ...prev]);
+                setCurrentSessionId(id);
+                setActiveTab('chat');
+            }, [lang]);
+
+            useEffect(() => { if (sessions.length === 0) createNewSession(); }, [createNewSession]);
+            useEffect(() => { messagesEndRef.current?.scrollIntoView({ behavior: "smooth" }); }, [currentSession?.messages]);
+
+            const handleSend = async (e) => {
+                e.preventDefault();
+                if (!input.trim() || isLoading) return;
+
+                const userMsg = { id: uuidv4(), role: Role.USER, content: input };
+                const thinkingMsg = { id: 'thinking', role: Role.ASSISTANT, content: '', isSearching: true };
+                
+                setInput('');
+                setIsLoading(true);
+                setSessions(prev => prev.map(s => s.id === currentSessionId ? { ...s, messages: [...s.messages, userMsg, thinkingMsg] } : s));
+
+                try {
+                    const ai = new GoogleGenAI({ apiKey: process.env.API_KEY });
+                    const history = currentSession.messages.map(m => ({ role: m.role === Role.USER ? 'user' : 'model', parts: [{ text: m.content }] }));
+                    const response = await ai.models.generateContent({
+                        model: 'gemini-3-pro-preview',
+                        contents: [...history, { role: 'user', parts: [{ text: userMsg.content }] }],
+                        config: { tools: [{ googleSearch: {} }], systemInstruction: `Identity: Helpfulat Assistant. Creator: Bodinizo. Deep Search: ${isDeepSearch}.` }
+                    });
+
+                    setSessions(prev => prev.map(s => {
+                        if (s.id === currentSessionId) {
+                            return { ...s, messages: [...s.messages.filter(m => m.id !== 'thinking'), { id: uuidv4(), role: Role.ASSISTANT, content: response.text, sources: response.candidates?.[0]?.groundingMetadata?.groundingChunks }] };
+                        }
+                        return s;
+                    }));
+                } catch (err) {
+                    log("ERROR", err.message);
+                    setSessions(prev => prev.map(s => s.id === currentSessionId ? { ...s, messages: s.messages.filter(m => m.id !== 'thinking') } : s));
+                } finally {
+                    setIsLoading(false);
+                }
+            };
+
+            return (
+                <div className={`flex h-screen overflow-hidden ${isRTL ? 'flex-row-reverse' : 'flex-row'}`} dir={isRTL ? 'rtl' : 'ltr'}>
+                    <aside className="w-72 bg-white/60 backdrop-blur-xl border-r-4 border-white flex flex-col hidden lg:flex">
+                        <div className="p-6">
+                            <h1 className="text-3xl font-black text-emerald-900 mb-6 flex items-center gap-2">🧠 Helpfulat</h1>
+                            <button onClick={createNewSession} className="w-full py-4 font-black text-emerald-700 bg-white border-b-8 border-emerald-100 rounded-2xl shadow-sm hover:translate-y-1 transition-all">+ New Chat</button>
+                        </div>
+                        <div className="flex-1 overflow-y-auto px-4 space-y-2 custom-scrollbar">
+                            {sessions.map(s => (
+                                <button key={s.id} onClick={() => { setCurrentSessionId(s.id); setActiveTab('chat'); }} className={`w-full text-left px-5 py-4 rounded-2xl text-sm font-bold truncate transition-all ${currentSessionId === s.id && activeTab === 'chat' ? 'bg-emerald-500 text-white shadow-lg' : 'hover:bg-white/80 text-emerald-900'}`}>
+                                    {s.messages.length > 0 ? s.messages[0].content : s.title}
+                                </button>
+                            ))}
+                        </div>
+                        <div className="p-4 border-t-4 border-white/50"><button onClick={() => setActiveTab('arcade')} className="w-full py-3 rounded-xl font-bold bg-purple-500 text-white">🕹️ Arcade</button></div>
+                    </aside>
+
+                    <main className="flex-1 flex flex-col bg-white/30 backdrop-blur-sm relative">
+                        <header className="h-20 border-b-4 border-white flex items-center justify-between px-8 bg-white/20">
+                            <div className="lg:hidden text-2xl font-black text-emerald-900">Helpfulat</div>
+                            <div className="flex items-center gap-4">
+                                <button onClick={() => setIsDeepSearch(!isDeepSearch)} className={`px-4 py-1.5 rounded-xl text-[10px] font-black transition-all ${isDeepSearch ? 'bg-emerald-500 text-white' : 'bg-gray-200 text-gray-500'}`}>DEEP SEARCH</button>
+                                <button onClick={() => setLang(lang === 'EN' ? 'AR' : 'EN')} className="w-10 h-10 rounded-xl bg-white border-2 border-white flex items-center justify-center font-black text-xs">{lang === 'EN' ? 'AR' : 'EN'}</button>
+                            </div>
+                        </header>
+
+                        <div className="flex-1 overflow-y-auto custom-scrollbar">
+                            {activeTab === 'chat' ? (
+                                <div className="pb-32">
+                                    {currentSession?.messages.length === 0 ? (
+                                        <div className="mt-32 text-center px-6">
+                                            <div className="text-8xl mb-6 animate-bounce">👋</div>
+                                            <h2 className="text-4xl font-black text-emerald-900 mb-2">Helpfulat</h2>
+                                            <p className="text-emerald-800/60 font-bold">Deep search assistant at your service.</p>
+                                        </div>
+                                    ) : (
+                                        currentSession?.messages.map(m => <ChatMessage key={m.id} message={m} />)
+                                    )}
+                                    <div ref={messagesEndRef} />
+                                </div>
+                            ) : <Arcade />}
+                        </div>
+
+                        {activeTab === 'chat' && (
+                            <div className="absolute bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-sky-200/80 to-transparent">
+                                <form onSubmit={handleSend} className="max-w-4xl mx-auto flex items-center bg-white border-4 border-white rounded-[2.5rem] shadow-2xl px-6 py-2">
+                                    <input value={input} onChange={e => setInput(e.target.value)} placeholder="Search for anything..." className="flex-1 bg-transparent border-none focus:ring-0 font-bold py-4 text-gray-700 text-lg" />
+                                    <button type="submit" disabled={!input.trim() || isLoading} className="p-4 bg-emerald-500 text-white rounded-full disabled:opacity-30 shadow-lg">
+                                        <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="4" d="M5 12h14M12 5l7 7-7 7" /></svg>
+                                    </button>
+                                </form>
+                            </div>
+                        )}
+                    </main>
+                </div>
+            );
+        };
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+        log("SYSTEM", "Helpfulat Online");
     </script>
 </body>
 </html>
